ARM64: dts: rk3399: the USB 2.0 vbus GPIO is board specific
A GPIO was put in rk3399.dtsi that doesn't belong there.  Specifically
this GPIO isn't the same for all rk3399 boards.  I presume it belongs in
rk3399-tb.dts, so move it there.

Change-Id: I0b3272655da565eb6b348a33401f7517224db5fa
Fixes: 3ed499f07cf7 ("ARM64: dts: rockchip: rk3399: add usb2.0 phy node")
Signed-off-by: Douglas Anderson <dianders@chromium.org>

--- a/arch/arm64/boot/dts/rockchip/rk3399-tb.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399-tb.dtsi
@@ -532,6 +532,10 @@
 	status = "okay";
 };
 
+&usb2phy {
+	vbus_drv-gpio = <&gpio4 25 GPIO_ACTIVE_HIGH>;
+};
+
 &usb_host0_echi {
 	status = "okay";
 };
