ARM64: dts: rk3399-monkey: enable iommu and vop lite
Change-Id: I6cb75f09c99ffe76691ceb61d60774256663e72e
Signed-off-by: Huang Jiachai <hjc@rock-chips.com>

--- a/arch/arm64/boot/dts/rockchip/rk3399-fb.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399-fb.dtsi
@@ -126,7 +126,7 @@
 		reg = <0x0 0xff8f3f00 0x0 0x100>;
 		interrupts = <GIC_SPI 119 IRQ_TYPE_LEVEL_HIGH>;
 		interrupt-names = "vopl_mmu";
-		status = "disabled";
+		status = "okay";
 	};
 
 	vopb_rk_fb: vop-rk-fb@ff900000 {
@@ -171,7 +171,7 @@
 		reg = <0x0 0xff903f00 0x0 0x100>;
 		interrupts = <GIC_SPI 118 IRQ_TYPE_LEVEL_HIGH>;
 		interrupt-names = "vopb_mmu";
-		status = "disabled";
+		status = "okay";
 	};
 
 	hdmi_rk_fb: hdmi-rk-fb@ff940000 {
