--- a/arch/arm/mach-nintendo3ds/Kconfig
+++ b/arch/arm/mach-nintendo3ds/Kconfig
@@ -5,6 +5,8 @@ config NINTENDO3DS_DT
 	bool "Support Nintendo 3DS Device Tree based boot"
 	select ARM_GIC
 	select USE_OF
+	select ARCH_REQUIRE_GPIOLIB
+	select PINCTRL
 	help
 	  Include support for booting the Nintendo 3DS
 	  using a device tree machine description.
